--- a/static/index.html
+++ b/static/index.html
@@ -17,6 +17,7 @@
 		<script src="json2.js"></script>
 	</head>
 	<body bgcolor="white" height="100%" width="100%">
+		<!-- <button onclick="setIsPartyMode()">🎉Party Mode🎉</button> -->
 		<div id="debug"></div>
 		<canvas id="c" width="100%" height="100%" style="-webkit-tap-highlight-color: transparent"></canvas>
 
@@ -30,15 +31,14 @@
 			var wscounter = 0;
 			var socket;
 
-			var worldURI = window.location.href.replace(window.location.pathname, `/world`);
-			// var isPartyMode = false // initialize to false
+			var isPartyMode = true;
 
-			// function setIsPartyMode() {
-			//     isPartyMode = !isPartyMode
-			//     if (isPartyMode) {
-			//         drawNextFrame()
-			//     }
-			// }
+			function setIsPartyMode() {
+				isPartyMode = !isPartyMode;
+				if (isPartyMode) {
+					drawNextFrame();
+				}
+			}
 
 			function debug(str) {
 				var debugDiv = document.getElementById("debug");
@@ -69,10 +69,10 @@
 			}
 
 			function prepEntity(entity) {
-				// if (isPartyMode) {
-				//     // creates strobe effect for party mode
-				//     entity["colour"] = getRandomColour()
-				// }
+				if (isPartyMode) {
+					// creates strobe effect for party mode
+					entity["colour"] = getRandomColour();
+				}
 				if (!entity["colour"]) {
 					entity["colour"] = "#FF0000";
 				}
@@ -111,7 +111,7 @@
 				if (drawNext) {
 					renderFrame();
 					drawNext = false;
-					// drawNext = isPartyMode
+					drawNext = isPartyMode;
 				}
 			}
 
@@ -138,7 +138,9 @@
 				world[entity] = data;
 				drawNextFrame(); // (but should we?)
 				//XXX: Send a XHTML Request that updates the entity you just modified!
-				socket.send(JSON.stringify(world));
+				if (socket.readyState === socket.OPEN) {
+					socket.send(JSON.stringify(world));
+				}
 			}
 
 			var counter = 0;
@@ -268,39 +270,25 @@
 
 			function wsSetup() {
 				var url = "ws://" + host + "/subscribe";
+				var worldUrl = "ws://" + host + "/world";
 				socket = new WebSocket(url);
 				socket.onopen = function () {
-					//XXX: TODO What are you going to do here?
-					let xhr = new XMLHttpRequest();
-					xhr.onreadystatechange = function () {
-						// if the operation is complete.
-						if (xhr.readyState === 4) {
-							try {
-								if (xhr.status === 200) {
-									world = Json.parse(xhr.responseText);
-									drawFrame();
-									drawNextFrame();
-								}
-							} catch (e) {
-								console.log(e);
-							}
-						} // xhr.readyState
-					}; // onreadystatechange
-
-					xhr.open("GET", worldURI);
-					xhr.setRequestHeader("Content-Type", "application/json");
-					xhr.setRequestHeader("Accept:", "application/json");
-					xhr.send();
-				}; // onopen
-
+					debug("Websocket Opened Successfully");
+				};
 				socket.onerror = function (msg) {
 					debug("WebSocket Error:" + msg.data);
 				};
+
 				socket.onmessage = function (msg) {
+					console.log(msg);
 					try {
 						debug("WebSocket Recv:" + msg.data);
 						//XXX: TODO What are you going to do here?
-						world = JSON.parse(msg.data);
+						data = JSON.parse(msg.data);
+						for (let i in data) {
+							world[i] = data[i];
+						}
+						drawNextFrame();
 					} catch (e) {
 						alert("socket on message: " + e);
 					}
